Fix text column alignment in the grid, was inheriting body centering

--- a/App/StackExchange.DataExplorer/Content/slickgrid/slick.grid.css
+++ b/App/StackExchange.DataExplorer/Content/slickgrid/slick.grid.css
@@ -103,6 +103,10 @@
 	border-style: solid;
 }
 
+.slick-cell.text {
+    text-align: left;
+}
+
 .slick-cell:focus {
 	outline: none;
 }
